unpackaged/main/default/objects/Booking_Invoice__c/Booking_Invoice__c.object-meta.xml
<CustomObject>
    <label>Booking Invoice</label>
    <nameField>
        <label>Booking Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>