unpackaged/main/default/objects/Booking_Invoice__c/fields/Agent_Commision_Total__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commision_Total__c</fullName>
    <formula>Invoice_Rows_Net__c * Agent_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Commision Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>