unpackaged/main/default/objects/Booking_Invoice__c/fields/Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission__c</fullName>
    <label>Agent Commission</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>