unpackaged/main/default/objects/Booking_Invoice__c/fields/Agent_Commission_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_Next_Month__c</fullName>
    <formula>Accom_Net_Next_Month__c * Agent_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Commission Next Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>