unpackaged/main/default/objects/Booking_Invoice__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>