unpackaged/main/default/objects/Booking_Invoice__c/fields/Commission_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Commission_Last_Month__c</fullName>
    <formula>Accom_Net_Last_Month__c * Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Last Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>