unpackaged/main/default/objects/Booking_Invoice__c/fields/Commission_Total__c.field-meta.xml
<CustomField>
    <fullName>Commission_Total__c</fullName>
    <formula>Invoice_Rows_Net__c * Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>