unpackaged/main/default/objects/Booking_Invoice__c/fields/Enquiries_and_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_and_Bookings__c</fullName>
    <label>Enquiries and Bookings</label>
    <referenceTo>Enquiries_and_Bookings__c</referenceTo>
    <relationshipLabel>Booking Invoices</relationshipLabel>
    <relationshipName>Booking_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>