unpackaged/main/default/objects/Booking_Invoice__c/fields/Invoice_Rows_Booking_Fee_Net__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Rows_Booking_Fee_Net__c</fullName>
    <label>Invoice Rows Booking Fee Net</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>