unpackaged/main/default/objects/Booking_Invoice__c/fields/LMED__c.field-meta.xml
<CustomField>
    <fullName>LMED__c</fullName>
    <formula>addMonths(TMED__c ,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LMED</label>
    <type>Date</type>
</CustomField>