unpackaged/main/default/objects/Booking_Invoice__c/fields/LMSD__c.field-meta.xml
<CustomField>
    <fullName>LMSD__c</fullName>
    <formula>addMonths(TMSD__c ,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LMSD</label>
    <type>Date</type>
</CustomField>