unpackaged/main/default/objects/Booking_Invoice__c/fields/NMED__c.field-meta.xml
<CustomField>
    <fullName>NMED__c</fullName>
    <formula>DATE( Year(ADDMONTHS(TODAY(),2)),MONTH( ADDMONTHS(TODAY(),2)),1 ) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NMED</label>
    <type>Date</type>
</CustomField>