unpackaged/main/default/objects/Booking_Invoice__c/fields/NMSD__c.field-meta.xml
<CustomField>
    <fullName>NMSD__c</fullName>
    <formula>TMED__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NMSD</label>
    <type>Date</type>
</CustomField>