unpackaged/main/default/objects/Booking_Invoice__c/fields/Number_Of_Days_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_This_Month__c</fullName>
    <formula>MIN((Period_End_Date__c - Period_Start_Date__c),
(Period_End_Date__c - TMSD__c),
(TMED__c - LMED__c),
(NMSD__c - Period_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Days This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>