unpackaged/main/default/objects/Booking_Invoice__c/fields/Profit_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Profit_This_Month__c</fullName>
    <formula>(((Commission_Total__c - Agent_Commision_Total__c) + Invoice_Rows_Booking_Fee_Net__c) / (Period_End_Date__c - Period_Start_Date__c)) * IF(Number_Of_Days_This_Month__c &gt; 0, Number_Of_Days_This_Month__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>