unpackaged/main/default/objects/Booking_Invoice__c/fields/TMED__c.field-meta.xml
<CustomField>
    <fullName>TMED__c</fullName>
    <formula>ADDMONTHS(DATE(YEAR(TODAY()),1,31),MONTH(TODAY()) -1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMED</label>
    <type>Date</type>
</CustomField>