unpackaged/main/default/objects/Booking_Invoice__c/fields/TMSD__c.field-meta.xml
<CustomField>
    <fullName>TMSD__c</fullName>
    <formula>DATE(YEAR(TODAY()),MONTH(TODAY()),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMSD</label>
    <type>Date</type>
</CustomField>